# nuro-s2

./: .dockerignore  .gitignore  Dockerfile  README.md  deploy-nuro.sh
.github/workflows/: release.yml
backend/: go.mod  go.sum
backend/ent/: account.go  account_create.go  account_update.go  accountgroup.go  accountgroup_create.go  accountgroup_update.go  batchimagejob.go  batchimagejob_create.go  batchimagejob_update.go  client.go  group.go  group_create.go  group_update.go  mutation.go  proxy.go  proxy_create.go  proxy_query.go  proxy_update.go  usagelog.go  usagelog_create.go  usagelog_update.go
backend/migrations/: 080_ops_error_logs_add_latency_breakdown.sql  145_openai_image_tasks.sql  146_deleted_api_key_audit.sql  147_ops_error_log_api_key_prefix.sql  148_add_ops_error_logs_user_time_index_notx.sql  149_proxy_expiry_fallback.sql  151_openai_edge_usage_metrics.sql  152_add_ops_system_logs_api_key_id.sql  153_add_ops_system_logs_api_key_id_index_notx.sql  154_content_moderation_matched_keyword.sql  155_user_platform_quotas_add_grok.sql  156_account_spark_shadow.sql  184_audit_logs.sql  (+25 more)
deploy/: .env.example  Caddyfile  Dockerfile  config.example.yaml  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.standalone.yml  docker-compose.yml  install.sh  load-test-staircase.sh  load-test-stream.js  paired-entrypoint.sh  single-host-autoscaler.sh  sub2api-edge-rs.service  sub2api.service
docs/: ASYNC_IMAGE_TASKS.md
edge-rs/: Cargo.toml  Dockerfile  README.md
edge-rs/src/: http_lane_pool.rs  main.rs
frontend/: pnpm-lock.yaml  vite.config.ts
(+985 files in other folders)
